--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.0.1",
     "mongodb": "^6.5.0",
     "nodemon": "^3.1.0",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "swagger-autogen": "^2.23.7"
